# vps_rag

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  .pymarkdown  .yamllint.yml  BRIEF.md  CONTRIBUTING.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  renovate.json
.github/workflows/: deploy.yml  docker-publish.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
api/data/alembic/: env.py
api/data/alembic/versions/: 0001_documents.py  (+2 more)
api/tests/: conftest.py
api/tests/integration/: test_api_chat.py  test_api_ingestion.py  test_chat_service.py
api/tests/unit/: test_chunker.py  test_ingestion_pipeline.py  test_web_loader.py
certs/: local.crt  local.key
data/evaluation/: samples.json
frontend/: .dockerignore  Dockerfile  README.md  pyproject.toml
frontend/.streamlit/: config.toml
frontend/src/app/: api_client.py  app.py  config.py  logger_config.py
frontend/tests/: test_api_client.py
grafana/provisioning/dashboards/: dashboards.yml
incidents/: README.md  apply.sh  revert.sh
incidents/01-evaluator-loop/: incident.patch  post-mortem.md  trainer.md
incidents/02-slow-retrieval/: incident.patch  post-mortem.md  trainer.md
incidents/03-prompt-hallucination/: incident.patch  post-mortem.md  trainer.md
incidents/04-pg-network-latency/: inject.sh  post-mortem.md  revert.sh  trainer.md
incidents/05-runaway-chunking/: incident.patch  post-mortem.md  trainer.md
prometheus/: prometheus.yml  rules.yml
promtail/: promtail.yml
(+31 files in other folders)
