[project]
name = "rag-frontend"
version = "0.1.0"
description = "Streamlit frontend for the RAG sample"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.35",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
